# V-AzureApp

./: .pre-commit-config.yaml  Makefile  bandit-report.html  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: app-pre-deployment-tests.yml  app-security.yml  tests.yml
.github/workflows/: app-dast-scan.yml  app-deploy-dev.yml  app-deploy.yml  app-monitoring-dev.yml  app-post-deployment-tests.yml  app-pre-deployment-tests.yml  app-security.yml  deploy-dev-app.yml  security.yml
function_app/: __init__.py
tests/integration/: test_function_integration.py  test_funtion_integration.py
tests/unit/: test_http_trigger.py
